2007-12-21 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* configure.ac: post release version bump 0.6.3

=== 0.6.2 ===
2007-12-21 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* NEWS: update

2007-12-21 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* demo/Makefile.am: ship the demo in tarball, thanks to Pablo Rodriguez
	for pointing this out.

2007-12-14 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.override: Wrap poppler_page_get_image_mapping and
        poppler_page_get_form_field_mapping

2007-12-14 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.override: Wrap poppler_page_get_link_mapping

2007-12-14 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.override: Wrap poppler_page_get_thumbnail_size

2007-11-14 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* configure.ac: bump to version 0.6.2

=== 0.6.1 ===
2007-12-12 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* demo/demo-poppler.py: Small change to test poppler_font_info_scan

2007-12-12 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.override: Wrap poppler_font_info_scan

2007-12-12 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* demo/demo-poppler.py: Add a simple example.

2007-12-09 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.defs: Strip poppler prefix from functions, make
        document_new_from_file actually work.

=== 0.6.0 ===
2007-11-12 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* Makefile.am: make distcheck happy removing old files
	* configure.ac: bump to version 0.6.0 (sync with poppler)

2007-11-04 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.defs: Implement fields for descriptors.

2007-11-04 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.defs: make poppler_document_new_from_file the default
	constructor for poppler.Document.

2007-11-02 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.defs: implement poppler.Action

2007-11-02 Gian Mario Tagliaretti  <gianmt@gnome.org>
